index.css
main{
    margin:1rem;
    min-height:100vh;
}
body{
  margin:0rem;
  background-color:#f2f2f2;
  min-height: 100%;
}
p, li{
  font-size:medium;
}
hr{
  border:2px solid #3b0000;
}
h1, h2, h3, h4, h5, h6, p, li {
    font-family: 'Ubuntu Mono', sans-serif;
      color: #000;
    margin-left: 0.4%;
    }
  #about h3, #about h2{
display:inline;
  }
  h3, h4{
color:#3b3b3b;
  }
.navbar {
    background-image: linear-gradient(180deg, #120001 0.001%, #3b0000);
    overflow: hidden;
    position: fixed;
    top: 0%;
    left: 0%;
    margin-bottom: 0.5rem;
    width: 100%;
    z-index: 3;
  }
  .navbar a {
    font-family: 'Ubuntu Mono';
    color: #f2f2f2;
    padding: 0.6%;
    text-decoration: none;
    font-size: 2rem;
    border-right: 2px solid #fff;
    display: inline;
  }
  .current-link {
    background-color: rgb(87, 5, 72);
  }
  .navbar a:hover, .navbar a:focus {
    background-color: rgb(141, 0, 80);
  }
  .contentbar{
    flex-flow:row wrap;
      max-width: 95%;
      padding-bottom: 100%;
      display: flex;
      align-content: center;
      flex-shrink: 1;
  }
  .contentbar>article, #about{
    border: 2px transparent;
    /*box-shadow: 2px 2px 2px 1px black;*/
    max-width: 100%;
    margin:1rem;
    padding: 0rem 0.7rem 0.7rem 0.7rem;
    position:relative;
    left:-2%;
      animation: fadearticle 0.7s ease-in-out 0.25s 1 forwards;
  }
  footer{
    position:fixed;
    bottom:0;
    width:100%;
    height:2.5rem;
    background-image: linear-gradient(180deg, #120001 0.001%, #3b0000);
    z-index: 3;
  }
  footer p, footer a{
    color:#fff;
  }
  @keyframes fadearticle{
    from{
      left:-2%;
      color:#f2f2f2;
    }
    to{
      left:0%;
      color:#000;
    }
  }
  @media (max-width: 1000px) {
    button{
      max-width: 48%;
    }
    .contentbar{
      flex-flow:row-reverse wrap;
        max-width: 90%;
        padding-bottom: 80%;
        display: flex;
        flex-flow: column-reverse wrap;
        align-content: center;
        flex-shrink: 1;
    }
    .advert{
      max-width:85%;
      margin: 0.5rem;
      }
      .contentbar>article, #about{
        left:-5%;
        animation: fadearticle 0.7s ease-in-out 0.25s 1 forwards;
      }
      @keyframes fadearticle{
        from{
          left:-5%;
          color:#f2f2f2;
        }
        to{
          left:0%;
          color:#000;
        }
      }
  }

